# databricks-observe

./: .gitignore  dagster_cloud.yaml  pyproject.toml  workspace.yaml
dagster_databricks_observer/: __init__.py  job_discovery.py  pipeline_discovery.py  spark_utils.py  table_discovery.py
dagster_databricks_observer/assets/: customer_assets.py  dlt_assets.py
dagster_databricks_observer/schedules/: observe_schedule.py
dagster_databricks_observer/sensors/: dlt_sensor.py
